# clif_niv_rojas

./: .gitattributes  .gitignore  CLAUDE.md  README.md  config_template.json  output_schema.md  pyproject.toml  run_all.py  run_all.sh
code/: 01_wide_generator.py  02_study_cohort.ipynb  03_descriptive_characteristics.py  04_analysis_no_interaction.py  05_analysis_interaction.py
lead_site_analysis/: 01_pool_results.py  02_figures.py  03_tables.py  README.md  run_pooling.sh
