[project]
name = "nippv-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clifpy>=0.3.1",
    "firthlogist>=0.5.0",
    "jupyter>=1.1.1",
    "marimo>=0.17.8",
    "matplotlib>=3.9.0",
    "nbconvert>=7.17.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.5.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
]
